// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Action Creator: Bounce Report should dispatch a chart refresh action 1`] = `
Array [
  Array [
    undefined,
  ],
  Array [
    Array [
      Object {
        "count_bounce": 1,
      },
    ],
  ],
  Array [
    Object {
      "meta": Object {
        "method": "GET",
        "params": Object {
          "from": "2017-02-14T12:02",
          "metrics": "count_bounce",
        },
        "url": "/metrics/deliverability/bounce-classification",
      },
      "type": "FETCH_METRICS_BOUNCE_CLASSIFICATIONS",
    },
  ],
  Array [
    Object {
      "payload": Object {
        "aggregates": undefined,
        "categories": undefined,
        "types": undefined,
      },
      "type": "REFRESH_BOUNCE_CHART",
    },
  ],
]
`;

exports[`Action Creator: Bounce Report should dispatch a table refresh action 1`] = `
Array [
  Array [
    Object {
      "meta": Object {
        "method": "GET",
        "params": Object {
          "from": "2017-02-14T12:02",
          "metrics": "count_bounce",
        },
        "url": "/metrics/deliverability/bounce-reason/domain",
      },
      "type": "FETCH_METRICS_BOUNCE_REASONS_BY_DOMAIN",
    },
  ],
  Array [
    Object {
      "payload": Object {
        "reasons": Object {
          "meta": Object {
            "method": "GET",
            "params": Object {
              "from": "2017-02-14T12:02",
              "metrics": "count_bounce",
            },
            "url": "/metrics/deliverability/bounce-reason/domain",
          },
          "type": "FETCH_METRICS_BOUNCE_REASONS_BY_DOMAIN",
        },
      },
      "type": "REFRESH_BOUNCE_TABLE",
    },
  ],
]
`;

exports[`Action Creator: Bounce Report should not refresh chart nor update bounce classifications if 0 bounces 1`] = `
Array [
  Array [
    undefined,
  ],
  Array [
    Array [
      Object {
        "foo": "bar",
      },
    ],
  ],
]
`;
